# odc_sdk_python

./: .gitignore  Makefile  README.md  TechnicalReadme.md  pyproject.toml
docs/: README.md  Technical.md  download.py  example.py
docs/deprecated/: prior_example.py
docs/stats/: advanced_example.py  example.py
odc_sdk/: __init__.py  client.py  endpoints.py  request_handler.py
odc_sdk/configs/: __init__.py  env_var.py
odc_sdk/logic/: __init__.py  dataset_query.py  stats_logic.py  user_logic.py
odc_sdk/models/: __init__.py  auth_endpoints.py  public_endpoints.py
odc_sdk/models/endpoints/: auth_endpoints.py  public_endpoints.py
odc_sdk/models/stats/: stats_responses.py
src/: dataset_query_test.py
src/logic/: dataset_query.py  shared_logic.py
src/models/dataset/: dataset_info.py
tests/: configs_test.py  dataset_query_test.py  endpoints_test.py  package_test.py  user_query_test.py
