[project]
name = "odc_sdk"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/ucsf-ferguson-lab/odc_python_sdk"
Issues = "https://github.com/ucsf-ferguson-lab/odc_python_sdk/issues"

[build-system]
requires = ["flit_core >= 3.12.0, <4"]
build-backend = "flit_core.buildapi"
